# PALM4Umadeeasy

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md
backend/: alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_palm_runner_config.py
backend/src/: config.py  spine.py
backend/src/api/: auth.py  deps.py  main.py
backend/src/catalogues/: loader.py
backend/src/confidence/: engine.py
backend/src/db/: database.py  models.py
backend/src/execution/: remote_client.py  runner.py  settings.py
backend/src/models/: scenario.py
backend/src/monitoring/: health.py  logging_config.py  metrics.py
backend/src/postprocessing/: comparison.py  engine.py
backend/src/reporting/: generator.py
backend/src/science/: facade_greening_advisory.py  forcing_validator.py  wind_comfort.py
backend/src/security/: audit.py  password.py  rate_limit.py
backend/src/snapshots/: buildings.py
backend/src/translation/: dynamic_driver.py  engine.py  namelist.py  static_driver.py
backend/src/validation/: buildings.py  engine.py
backend/src/workers/: executor.py  queue.py  stale_checker.py  worker.py
backend/tests/api/: test_admin.py  test_api.py
backend/tests/fixtures/: scenarios.py
backend/tests/integration/: test_linux_worker.py  test_spine.py
backend/tests/unit/: test_admin_palm_runner.py  test_admin_users.py  test_building_rasteriser.py  test_buildings_edits.py  test_comparison.py  test_confidence.py  test_execution_runner.py  test_facade_greening_advisory.py  test_forcing.py  test_monitoring.py  (+7 more)
(+65 files in other folders)
