[project]
name = "palm4umadeeasy"
version = "0.1.0"
description = "Consultant-grade decision-support platform for urban microclimate intervention testing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "netCDF4>=1.6",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pythermalcomfort>=3.0",
    "jinja2>=3.1",
    "weasyprint>=60.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "httpx>=0.26",
    "websockets>=12.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
